2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/gdi32/main/dllmain.c: Add @implemented and @unimplemented
	to APIs.
	* lib/gdi32/misc/stubs.c: Ditto.
	* lib/gdi32/misc/stubsa.c: Ditto.
	* lib/gdi32/misc/stubsw.c: Ditto.
	* lib/gdi32/objects/bitblt.c: Ditto.
	* lib/gdi32/objects/brush.c: Ditto.
	* lib/gdi32/objects/clip.c: Ditto.
	* lib/gdi32/objects/dc.c: Ditto.
	* lib/gdi32/objects/fillshap.c: Ditto.
	* lib/gdi32/objects/line.c: Ditto.
	* lib/gdi32/objects/pen.c: Ditto.
	* lib/gdi32/objects/region.c: Ditto.
	* lib/gdi32/objects/text.c: Ditto.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* drivers/storage/class2/class2.c: Add @implemented and @unimplemented
	to APIs.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/advapi32/misc/shutdown.c: Add @implemented and @unimplemented
	to APIs.
	* lib/advapi32/misc/stubs.c: Ditto.
	* lib/advapi32/misc/sysfunc.c: Ditto.
	* lib/advapi32/reg/reg.c: Ditto.
	* lib/advapi32/sec/ac.c: Ditto.
	* lib/advapi32/sec/misc.c: Ditto.
	* lib/advapi32/sec/sec.c: Ditto.
	* lib/advapi32/sec/sid.c: Ditto.
	* lib/advapi32/service/scm.c: Ditto.
	* lib/advapi32/service/sctrl.c: Ditto.
	* lib/advapi32/token/privilege.c: Ditto.
	* lib/advapi32/token/token.c: Ditto.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* tools/rgenstat/rgenstat.c (parse_file): Be silent.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* rules.mak (XSLTPROC): Add.
	* tools/Makefile: Add rgenstat.
	* apistatus.lst: New file.
	* tools/rgenstat: New directory.
	* tools/rgenstat/.cvsignore: New file.
	* tools/rgenstat/llmosrt.c: Ditto.
	* tools/rgenstat/Makefile: Ditto.
	* tools/rgenstat/rgenstat.c: Ditto.
	* tools/rgenstat/web: New directory.
	* tools/rgenstat/web/*.gif: New files.
	* tools/rgenstat/web/.cvsignore: New file.
	* tools/rgenstat/web/rapistatus.css: Ditto.
	* tools/rgenstat/web/rapistatus.js: Ditto.
	* tools/rgenstat/web/rapistatus.xsl: Ditto.
